--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
   "dependencies": {
     "next": "16.0.7",
     "react": "19.2.0",
-    "react-dom": "19.2.0",
-    "three": "0.160.0"
+    "react-dom": "19.2.0"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -21,6 +20,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.0.7",
+    "three": "^0.181.2",
     "typescript": "^5"
   }
 }
