--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "munkres-js": "^1.2.2",
     "next": "16.0.7",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@types/node": "^20",
